--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "postcss": "^8.3.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-spinners": "^0.11.0",
+    "three": "^0.133.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.30",
     "@types/tailwindcss": "^2.2.1",
+    "@types/three": "^0.133.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.1.0",
     "eslint-config-next": "^12.0.0",
