--- a/.prettierignore
+++ b/.prettierignore
@@ -1,18 +1,13 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+/.pnp
+.pnp.js
 
 # testing
 /coverage
 
 # next.js
+.next
 /.next/
 /out/
 
@@ -36,10 +31,3 @@ yarn-error.log*
 
 # vercel
 .vercel
-
-# next-sitemap
-robots.txt
-sitemap.xml
-
-# workspace
-.vscode
