--- a/package.json
+++ b/package.json
@@ -6,33 +6,43 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "eslint src --fix && yarn format",
+    "lint:strict": "eslint --max-warnings=0 src",
+    "prettier:check": "prettier -c src",
+    "format": "prettier -w src"
   },
   "dependencies": {
-    "autoprefixer": "^10.3.7",
+    "autoprefixer": "^10.4.0",
     "clsx": "^1.1.1",
-    "next": "^11.1.2",
+    "next": "^12.0.1",
     "next-themes": "0.0.15",
-    "postcss": "^8.3.9",
+    "postcss": "^8.3.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-spinners": "^0.11.0",
-    "three": "^0.133.1"
+    "three": "^0.134.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.30",
-    "@types/tailwindcss": "^2.2.1",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.33",
+    "@types/tailwindcss": "^2.2.2",
     "@types/three": "^0.133.1",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.1.0",
-    "eslint-config-next": "^12.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^12.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.4.1",
     "tailwindcss": "^2.2.17",
     "typescript": "^4.4.4"
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "cz-conventional-changelog"
     }
-  }
+  },
+  "packageManager": "yarn@3.1.0"
 }
