--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-config-next": "^12.0.1",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.4.1",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^2.2.17",
     "typescript": "^4.4.4"
   },
