--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier -w src"
   },
   "dependencies": {
+    "@react-three/drei": "^7.19.2",
+    "@react-three/fiber": "^7.0.17",
     "autoprefixer": "^10.4.0",
     "clsx": "^1.1.1",
     "next": "^12.0.1",
