--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "home",
   "version": "0.1.0",
   "private": true,
+  "sideEffects": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,11 +14,11 @@
     "format": "prettier -w src"
   },
   "dependencies": {
-    "@react-three/drei": "^7.19.2",
+    "@react-three/drei": "^7.19.6",
     "@react-three/fiber": "^7.0.17",
     "autoprefixer": "^10.4.0",
     "clsx": "^1.1.1",
-    "next": "^12.0.1",
+    "next": "^12.0.2",
     "next-themes": "0.0.15",
     "postcss": "^8.3.11",
     "react": "^17.0.2",
@@ -31,15 +32,15 @@
     "@types/react": "^17.0.33",
     "@types/tailwindcss": "^2.2.2",
     "@types/three": "^0.133.1",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.32.0",
-    "eslint-config-next": "^12.0.1",
+    "eslint-config-next": "^12.0.2",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.4.1",
     "tailwind-scrollbar": "^1.3.1",
-    "tailwindcss": "^2.2.17",
+    "tailwindcss": "^2.2.19",
     "typescript": "^4.4.4"
   },
   "config": {
