--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.0",
     "clsx": "^1.1.1",
     "next": "^12.0.3",
+    "next-mdx-remote": "^3.0.7",
     "next-themes": "0.0.15",
     "postcss": "^8.3.11",
     "react": "^17.0.2",
@@ -38,6 +39,7 @@
     "eslint": "^7.32.0",
     "eslint-config-next": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
+    "gray-matter": "^4.0.3",
     "prettier": "^2.4.1",
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^2.2.19",
