--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/fiber": "^7.0.17",
     "autoprefixer": "^10.4.0",
     "clsx": "^1.1.1",
+    "framer-motion": "^5.2.1",
     "next": "^12.0.3",
     "next-mdx-remote": "^3.0.7",
     "next-themes": "0.0.15",
