--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "format": "prettier -w src"
   },
   "dependencies": {
-    "@react-three/drei": "^7.20.0",
-    "@react-three/fiber": "^7.0.17",
+    "@react-three/drei": "^7.20.1",
+    "@react-three/fiber": "^7.0.18",
     "autoprefixer": "^10.4.0",
     "clsx": "^1.1.1",
     "framer-motion": "^5.2.1",
+    "mdx-bundler": "^7.0.0",
     "next": "^12.0.3",
-    "next-mdx-remote": "^3.0.7",
     "next-themes": "0.0.15",
     "postcss": "^8.3.11",
     "react": "^17.0.2",
@@ -37,11 +37,13 @@
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "cz-conventional-changelog": "^3.3.0",
+    "esbuild": "^0.13.12",
     "eslint": "^7.32.0",
     "eslint-config-next": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "gray-matter": "^4.0.3",
     "prettier": "^2.4.1",
+    "rehype-prism-plus": "^1.1.1",
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^2.2.19",
     "typescript": "^4.4.4"
