--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap --config next-sitemap.config.js",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "eslint src --fix && yarn format",
@@ -42,6 +43,7 @@
     "eslint-config-next": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "gray-matter": "^4.0.3",
+    "next-sitemap": "^1.6.203",
     "prettier": "^2.4.1",
     "rehype-prism-plus": "^1.1.1",
     "tailwind-scrollbar": "^1.3.1",
