--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint:fix": "eslint src --fix && yarn format",
     "lint:strict": "eslint --max-warnings=0 src",
     "prettier:check": "prettier -c src",
-    "format": "prettier -w src"
+    "format": "prettier -w src",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@react-three/drei": "^7.20.1",
@@ -43,6 +44,8 @@
     "eslint-config-next": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "gray-matter": "^4.0.3",
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.6",
     "next-sitemap": "^1.6.203",
     "prettier": "^2.4.1",
     "rehype-prism-plus": "^1.1.1",
@@ -54,6 +57,18 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "eslint --max-warnings=0",
+      "prettier -w"
+    ],
+    "src/**/*.{json,css,scss}": [
+      "prettier -w"
+    ],
+    "data/**/*.{md,mdx}": [
+      "prettier -w"
+    ]
   },
   "packageManager": "yarn@3.1.0"
 }
