--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint:strict": "eslint --max-warnings=0 src",
     "prettier:check": "prettier -c src",
     "format": "prettier -w src",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "release": "standard-version"
   },
   "dependencies": {
     "@react-three/drei": "^7.20.1",
@@ -49,6 +50,7 @@
     "next-sitemap": "^1.6.203",
     "prettier": "^2.4.1",
     "rehype-prism-plus": "^1.1.1",
+    "standard-version": "^9.3.2",
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^2.2.19",
     "typescript": "^4.4.4"
