--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "sideEffects": false,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && yarn postbuild",
     "postbuild": "next-sitemap --config next-sitemap.config.js",
     "start": "next start",
     "lint": "next lint",
@@ -17,43 +17,43 @@
     "release": "standard-version"
   },
   "dependencies": {
-    "@react-three/drei": "^7.20.1",
-    "@react-three/fiber": "^7.0.18",
+    "@react-three/drei": "^8.3.1",
+    "@react-three/fiber": "^7.0.24",
     "autoprefixer": "^10.4.0",
     "clsx": "^1.1.1",
-    "framer-motion": "^5.2.1",
-    "mdx-bundler": "^7.0.0",
-    "next": "^12.0.3",
+    "framer-motion": "^5.5.5",
+    "mdx-bundler": "^8.0.1",
+    "next": "^12.0.7",
     "next-themes": "0.0.15",
-    "postcss": "^8.3.11",
+    "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-spinners": "^0.11.0",
-    "three": "^0.134.0"
+    "three": "^0.135.0"
   },
   "devDependencies": {
-    "@types/node": "^16.11.6",
-    "@types/react": "^17.0.34",
+    "@types/node": "^17.0.4",
+    "@types/react": "^17.0.38",
     "@types/tailwindcss": "^2.2.4",
-    "@types/three": "^0.133.1",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
+    "@types/three": "^0.135.0",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
     "cz-conventional-changelog": "^3.3.0",
-    "esbuild": "^0.13.12",
-    "eslint": "^7.32.0",
-    "eslint-config-next": "^12.0.3",
+    "esbuild": "^0.14.8",
+    "eslint": "^8.5.0",
+    "eslint-config-next": "^12.0.7",
     "eslint-config-prettier": "^8.3.0",
     "gray-matter": "^4.0.3",
     "husky": "^7.0.4",
-    "lint-staged": "^11.2.6",
+    "lint-staged": "^12.1.4",
     "next-sitemap": "^1.6.203",
-    "prettier": "^2.4.1",
-    "rehype-prism-plus": "^1.1.1",
+    "prettier": "^2.5.1",
+    "rehype-prism-plus": "^1.1.3",
     "standard-version": "^9.3.2",
     "tailwind-scrollbar": "^1.3.1",
-    "tailwindcss": "^2.2.19",
-    "typescript": "^4.4.4"
+    "tailwindcss": "^3.0.7",
+    "typescript": "^4.5.4"
   },
   "config": {
     "commitizen": {
